--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.0",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^6.5.1",
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 5173",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.0",
+		"axios": "^1.1.3",
+		"mongoose": "^6.7.2",
+		"next": "latest",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.5"
+	},
+	"devDependencies": {
+		"@svgr/webpack": "^6.5.1",
+		"@types/node": "18.11.3",
+		"@types/react": "18.0.21",
+		"@types/react-dom": "18.0.6",
+		"autoprefixer": "^10.4.12",
+		"postcss": "^8.4.18",
+		"tailwindcss": "^3.2.1",
+		"typescript": "4.8.4"
+	}
 }
