--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"next": "latest",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-redux": "^8.0.5"
+		"react-redux": "^8.0.5",
+		"swiper": "^8.4.4"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^6.5.1",
